[project]
name = "stockapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id==4.3.4",
    "baostock==0.8.9",
    "fastapi==0.118.0",
    "loguru==0.7.3",
    "msgspec==0.19.0",
    "pydantic==2.11.10",
    "PyYAML==6.0.3",
    "SQLAlchemy==2.0.43",
    "starlette==0.48.0",
    "uvicorn==0.37.0"
]
