[project]
name = "stockapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id==4.3.4",
    "baostock == 0.8.9",
    "fastapi==0.118.0",
    "loguru==0.7.3",
    "matplotlib==3.10.7",
    "msgspec==0.19.0",
    "pandas==2.3.3",
    "pydantic==2.11.10",
    "pytest==8.4.2",
    "PyYAML==6.0.3",
    "SQLAlchemy==2.0.43",
    "starlette==0.48.0",
    "uvicorn==0.37.0",
    "asyncmy>=0.2.10",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
